[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

[lib]
name = "evaluator"
crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
bitris = { path = "../bitris" }
blockfish = { path = "../blockfish/blockfish-engine" }
libc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_repr = "0.1"
